[package]
name = "http-forward"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0", default-features = false, features = ["tls12"]}
rustls-pemfile = "0"
serde = { version = "1", features = ["derive"] }
bincode = "1"
md-5 = "0"
rand = "0"
log = "0"
env_logger = "0"
structopt = "0"